deploy/base/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postit-mariadb
  labels:
    app.kubernetes.io/name: postit-mariadb
    app.kubernetes.io/component: database
spec:
  selector:
    app.kubernetes.io/name: postit-mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
